[package]
name = "wasm_bindgen_sledgehammer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sledgehammer = "0.1.0"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["console", "Window", "Document", "Element", "HtmlElement", "HtmlHeadElement", "Performance"] }
js-sys = "0.3.60"
ufmt = "0.2.0"

[profile.release]
debug = true
lto = true
codegen-units = 1
opt-level = 3